--- a/Jakso2/Javascript.Moduuli4/tehtävä1.html
+++ b/Jakso2/Javascript.Moduuli4/tehtävä1.html
@@ -7,10 +7,10 @@
     <link href="tehtävä1.css" rel="stylesheet">
 </head>
 <body>
-<h1>TV-haku among us</h1>
+<h1>TV-haku</h1>
 <form action="https://api.tvmaze.com/search/shows">
     <input id="query" name="q" type="text">
-    <input type="submit" value="Search among us">
+    <input type="submit" value="Search">
 </form>
 <div class="container">
     <main>
@@ -22,7 +22,7 @@
 
 
     <footer>
-        <p>VÄHÄKS SIISTII among us </p>
+        <p></p>
     </footer>
 </div>
 </body>
